tests/samples/invalid/missing_structure.pn
fn foo(bar: Bar) -> i32
{
	var result = bar.baz;
	return: bar.baz
}
